# network

./: pyproject.toml
example/: number_identify.py
src/network/: __init__.py  connect_layer.py  exceptions.py  fully_connected_layer.py  layer.py  neural_network.py  types.py
src/network/layer/: __init__.py  fully_connected_layer.py  layer.py
tests/: fc_layer_test.py
