[project]
name = "network"
version = "0.0.1"
authors = [
  { name="ityeri", email="ityeri9@gmail.com" },
]
description = "인공신경망"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[tool.poetry]
name = "network"
version = "0.0.1"
description = "인공신경망ㅓㅓj"
authors = ["ityeri <ityeri9@gmail.com>"]
packages = [{ include = "network", from = "src" }]

[tool.poetry.dependencies]
numpy = "^2.3.4"

[tool.poetry.group.dev.dependencies]
pygame = "^2.6.1"

[project.urls]
#Homepage = "https://github.com/ityeri/..."
#Issues = "https://github.com/ityeri/.../issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"