[project]
name = "network"
version = "0.0.1"
authors = [
  { name="ityeri", email="ityeri9@gmail.com" },
]
description = "인공신경망"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "more-itertools>=10.8.0",
    "numpy>=2.3.5",
]

[tool.poetry]
name = "network"
version = "0.0.1"
description = "인공신경망ㅓㅓj"
authors = ["ityeri <ityeri9@gmail.com>"]
packages = [{ include = "network", from = "src" }]

[project.urls]
#Homepage = "https://github.com/ityeri/..."
#Issues = "https://github.com/ityeri/.../issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pygame>=2.6.1",
    "tensorflow>=2.20.0",
]

[tool.uv]
managed = true
